# pesexp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yaml  codeql.yml  python-linter.yaml
pesexp/: calculators.py
pesexp/calculators/: __init__.py  calculators.py
pesexp/cli/: optimize.py  params.py
pesexp/cmds/: optimize.py  params.py
pesexp/geometry/: connectivity.py  coordinate_systems.py  primitives.py  utils.py
pesexp/hessians/: hessian_approximations.py  hessian_guesses.py  hessian_tools.py
pesexp/linalg/: __init__.py  diagonal_scaling.py
pesexp/mep/: neb.py  utils.py
pesexp/ml_calculators/: __init__.py  gpr_calculator.py  kernels.py  ml_calculator.py
pesexp/neb/: __init__.py
pesexp/optimizers/: __init__.py  convergence.py  decorators.py  linesearch.py  ml_optimizers.py  optimizers.py
pesexp/utils/: exceptions.py  io.py
tests/: test_calculators.py  test_connectivity.py  test_coordinate_systems.py  test_geometry_utils.py  test_hessian_approximations.py  test_hessian_guesses.py  test_io.py  test_mep_utils.py  test_optimizers.py  test_primitives.py  test_transition_state_search.py  utils.py
tests/cli/: test_optimize.py  test_params.py
tests/cmds/: test_params.py
tests/coordinate_systems/: test_approximate_normal_coordinates.py
tests/geometry/: test_primitives.py
tests/hessians/: test_hessian_approximations.py  test_hessian_guesses.py  test_hessian_tools.py
tests/linalg/: test_diagonal_scaling.py
tests/mep/: test_energy_spring_method.py  test_energy_weighted_k.py  (+2 more)
(+87 files in other folders)
