[metadata]
name = pesexp
version = 0.0.1
author = Ralf Meyer
author_email = meyer.ralf@yahoo.com
description = A package to explore potential energy surfaces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ralf-meyer/pesexp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pesexp-optimize = pesexp.cli.optimize:main

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-resource-path
    rmsd
    numdifftools
    geometric
